--- a/index.qmd
+++ b/index.qmd
@@ -130,7 +130,7 @@ The quantification of human CYP ~~and transporter~~ proteins was performed using
 
 ### Viability and morphology
 
-in @fig-viability we see that a relatively stable viability during the first 9 days of culture, and stayed above 60 percent of the variability after spheroids formation. Viability for donor was stable throughout the experiment, for the timepoints measured. Donor 12 was stable for the first 9 days of the experiment, with a slight dropoff seen from day 12, but stable hereafter., never dropping below 60 % of the viability after spheroid formation. Donor 3 was stable for the first 12 days, with a slight dropoff hereafter. Furthermore, morpholgy was consistent throughout the experiment, disregardign a tendency for the spheroids to shrink during the experimentm, which might be due to compaction or shedding of cells?(main speroid article had atp relative to size).
+in figure viability we see that a relatively stable viability during the first 9 days of culture, and stayed above 60 percent of the variability after spheroids formation. Viability for donor was stable throughout the experiment, for the timepoints measured. Donor 12 was stable for the first 9 days of the experiment, with a slight dropoff seen from day 12, but stable hereafter., never dropping below 60 % of the viability after spheroid formation. Donor 3 was stable for the first 12 days, with a slight dropoff hereafter. Furthermore, morpholgy was consistent throughout the experiment, disregardign a tendency for the spheroids to shrink during the experimentm, which might be due to compaction or shedding of cells?(main speroid article had atp relative to size).
 
 Some loss of viability or metabolic activity cannot be ruled out, however this should not be a major concern since we are looking at relative data within each timepoints.
 
