--- a/index.qmd
+++ b/index.qmd
@@ -130,13 +130,15 @@ The quantification of human CYP ~~and transporter~~ proteins was performed using
 
 ### Viability and morphology
 
-in @fig-viability-main we see that a relatively stable viability during the first 9 days of culture, and stayed above 60 percent of the variability after spheroids formation. Viability for donor was stable throughout the experiment, for the timepoints measured. Donor 12 was stable for the first 9 days of the experiment, with a slight dropoff seen from day 12, but stable hereafter., never dropping below 60 % of the viability after spheroid formation. Donor 3 was stable for the first 12 days, with a slight dropoff hereafter. Furthermore, morpholgy was consistent throughout the experiment, disregardign a tendency for the spheroids to shrink during the experimentm, which might be due to compaction or shedding of cells?(main speroid article had atp relative to size).
+in @fig-viability-main we see that a relatively stable viability during the first 9 days of culture, and stayed above 60 percent of the variability after spheroids formation. Viability for donor was stable throughout the experiment, for the timepoints measured. Donor 12 was stable for the first 9 days of the experiment, with a slight dropoff seen from day 12, but stable hereafter., never dropping below 60 % of the viability after spheroid formation. Donor 3 was stable for the first 12 days, with a slight dropoff hereafter. Furthermore, morpholgy (@fig-morph) was consistent throughout the experiment, disregardign a tendency for the spheroids to shrink during the experimentm, which might be due to compaction or shedding of cells?(main speroid article had atp relative to size).
 
 Some loss of viability or metabolic activity cannot be ruled out, however this should not be a major concern since we are looking at relative data within each timepoints.
 
 Within nine days from seeding the spheroid has formed and exhibit a tightly compacted appearance.
 
 ![Each point is the mean ATP content of 5-8 spheroids/replicates (mean = 7). Missing data for for donor 1 on day 5 and 16. Data for donor 3 day 9 was measured on day 10](notebooks/viability/output/main_viability.png){#fig-viability-main}
+
+![Morphology for donors one, two, and three. Photos from the same well for each donor throughout the experiment. Scale bars represent 200 µm.](images/morph.png){#fig-morph}
 
 ## References
 
