--- a/index.qmd
+++ b/index.qmd
@@ -140,6 +140,14 @@ Within nine days from seeding the spheroid has formed and exhibit a tightly comp
 
 ![Morphology for donors one, two, and three. Photos from the same well for each donor throughout the experiment. Scale bars represent 200 µm.](images/morph.png){#fig-morph}
 
+### Effect of inflammatory cytokines on mRNA expression
+
+Employing the 3D model and more physiologically relevant concentrations of the pro-inflammatory cytokines IL-6 and IL-1β, we observed a dose-dependent downregulation of the transcription of the critical CYP3A4 enzyme, also at physiologically relevant concentrations, a notable finding that deviates from much of the existing literature (hører til I discussion, snarere end her?). Similar dose-dependent effects were seen with CYP1A2, 2B6, and 2D6 upon cytokine exposure, except for an unexpected upregulation of 2B6 after treatment with IL1-B.
+
+No negative effect of the treatments on viability or morphology was observed (rather the reverse, likely due to the excessive handling of the plates for viability/morphology). (Har også viability for treatments. Plottes og tilføjes supp.?)
+
+{{< embed notebooks/qPCR/mRNA.qmd#fig-mRNA-CYP3A4-main >}}
+
 ## References
 
 ::: {#refs}
