--- a/index.qmd
+++ b/index.qmd
@@ -148,6 +148,40 @@ No negative effect of the treatments on viability or morphology was observed (ra
 
 ![Relative CYP3A4 mRNA expression. Small points are mean of three donors for 72 and 120 hours, and two donors for 24 hours (donors two and three)](notebooks/qPCR/output/mrna_3A4_main.png){#fig-mrna-3a4-main width="2000"}
 
+### Activity 
+
+Supporting the transcriptomic data, the activity of CYP3A4—measured through the formation of the OH-midazolam metabolite—showed a dose-dependent decrease. This observation underscores the 3D model's ability to more closely replicate in vivo conditions, highlighting its relevance for pharmacokinetic studies. Notably, the extent of activity suppression was not as pronounced as the downregulation observed at the mRNA level. This discrepancy may indicate the influence of post-transcriptional factors, which could modulate enzyme activity beyond the effects captured at the transcriptional stage. Factors such as protein stability, enzymatic degradation rates, or post-translational modifications might play significant roles in maintaining enzyme activity despite reduced mRNA levels (nonsense?). (highlighting the need to not only look at mRNA? Til discussion?, perspektiver I at kigge ind I disse modifikationer)
+
+![Overall mean CYP3A4 activity relative to vehicle control after IL-6 treatment. 24 hour timepoints removed](notebooks/LCMS/output/act-il6.png){#fig-act-il6}
+
+![Overall mean CYP3A4 activity relative to vehicle control after IL-1B treatment.](notebooks/LCMS/output/act-il1b.png){#fig-act-il1b}
+
+## Discussion
+
+5 linjers summary
+
+### **Limitations**
+
+One of the main limitations of this study is the limited number of biological donors. This constraint may affect the generalizability of our findings across a broader population due to the inherent genetic and metabolic variability among individuals. Such variability can influence the expression and function of CYP enzymes, potentially leading to variations in drug metabolism that are not captured within the scope of our study.
+
+### **Strengths**
+
+However, the study also has notable strengths that may contribute insights into the field of inflammation and drug metabolism. Firstly, the integration of both transcriptomic and metabolomic data provides a better understanding of the IL-6 and IL1-β induced alterations in CYP enzyme functions.
+
+Secondly, the employment of a relatively novel cell model, utilizing primary human hepatocytes (PHHs), for the study of hepatocyte drug metabolism represents a significant advancement. The use of PHHs ensures a higher degree of physiological relevance compared to traditional cell lines or non-human models. PHHs maintain the expression of key drug-metabolizing enzymes and transporters, thereby offering a more accurate reflection of human liver metabolism. This choice of model enhances the applicability of our findings to clinical settings, providing insights that may help gap the bridge between in vitro in vivo translation.
+
+Moreover, the application of 3D culture techniques in modeling hepatocyte function further strengthens our study. 3D cultures have been shown to more closely mimic the in vivo liver microenvironment, supporting the maintenance of hepatocyte phenotype and function over extended periods. This approach allows for a more nuanced exploration of drug metabolism and toxicity, potentially leading to more predictive and reliable assessments of pharmacokinetics and pharmacodynamics in humans.
+
+### **Comparisons** 
+
+sammenlign med tidligere studier: AC og og errkas review plus karolinska
+
+### **Perspective**
+
+Incorporating the advancements in 3D primary human hepatocyte cultures into PBPK modeling might lead towards more accurate and reliable predictions of drug behavior in the human body. This integration has the potential to streamline pharmaceutical development processes, offering a dual benefit: reducing development costs and minimizing unnecessary exposure of study participants to experimental drugs. By more accurately simulating human liver physiology, these advanced models can improve the predictive power of PBPK simulations, thus optimizing drug development strategies and safeguarding participant well-being.
+
+## **Conclusion ** 
+
 ## References
 
 ::: {#refs}
